[package]
name = "model3"
version = "0.1.0"
edition = "2021"
authors = ["Chris Olstrom <chris@olstrom.com>"]
license = "MIT"
repository = "https://github.com/vtubing/orphism"
documentation = "https://docs.rs/model3"
description = "structs for (de)serializing model settings from model3.json files"

[dependencies]
remain = "^ 0.2"
serde = { version = "^ 1", features = ["derive"] }
serde_json = "^ 1"
